# PhoneTransfer

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  GUIDES.md  LICENSE  PhoneTransfer.spec  README.md  RELEASES.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  build.ps1  constraints.txt  install.bat  install.ps1  main.py  pyproject.toml  requirements-lock.txt  requirements-safe.txt  requirements.txt  setup-deps.bat  setup-deps.ps1
assets/: companion_meta.json  generate_icon.py
companion/: .gitignore  README.md  build_debug.ps1  build_release.ps1  gradlew  gradlew.bat  keystore.properties.example  settings.gradle.kts
convert/: README.md  convert_alarms.py  convert_audio.py  convert_blocked.py  convert_bookmarks.py  convert_calendar.py  convert_calllog.py  convert_contacts.py  convert_health.py  convert_heic.py  convert_imessage_to_mms.py  convert_mms_attachments.py  convert_notes.py  convert_ringtones.py  convert_signal.py  convert_sms.py  convert_video.py  convert_whatsapp.py
core/: adb_manager.py  afc2_connector.py  afc_connector.py  apple_driver_installer.py  backup_manager_ios.py  backup_parser_ios.py  capability_loader.py  companion_app_protocol.py  companion_installer.py  config_loader.py  content_dedup.py  daemon_restarter_ios.py  device_connection_cache.py  device_detector.py  device_quirks.py  disconnect_handler.py  extract_alarms_android.py  extract_alarms_ios.py  extract_apps_android.py  extract_blocked_android.py  extract_blocked_ios.py  extract_bookmarks_android.py  extract_bookmarks_ios.py  extract_browser_android.py  (+115 more)
tests/: README.md  (+1 more)
(+92 files in other folders)
