# PhoneTransfer — project metadata
# Used by tooling (uv, pip, ruff, mypy) for the Python version constraint
# and (eventually) install/build configuration.  Not currently a packaged
# distribution — install with `pip install -r requirements.txt`.

[project]
name = "phonetransfer"
description = "Cross-platform iOS ↔ Android device-to-device data transfer with backup-mod injection."
requires-python = ">=3.10"
dynamic = ["version"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["vendor/"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
